use Integer.valueOf in place of deprecated new Integer